# -opencv-

./: CMakeLists.txt  README.md  main.cpp  qui.cpp  qui.hpp
Infer/: CMakeLists.txt  TRTFrame.cpp  TRTFrame.hpp
MvCamera/: MvCamera.cpp  MvCamera.h
charseg/: CMakeLists.txt  seg.cpp  seg.hpp
model/: seq.txt
